Fix css spacing on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,7 +7,7 @@
 	    src: url({{ site.baseurl }}/assets/font/carolingia.ttf);
     }
 body {
-	padding: 0px;
+	padding: 40px 0;
 	margin: 90px 0 0 0;
   	color: #493c33;
   	background-color: black;
